--- a/index.html
+++ b/index.html
@@ -28,11 +28,55 @@
               <option value="ENUS">ENUS</option>
               <option value="ESES">ESES</option>
             </select><br>
-            <label for="">Layout</label>
-            <input type="radio" name="layout" id="layout-default" value="layout-default">
-            <input type="radio" name="layout" id="layout1" value="layout1">
-            <input type="radio" name="layout" id="layout2" value="layout2">
-            <input type="radio" name="layout" id="layout3" value="layout3">
+            <div style="background-color: aqua;">
+                <h1>Configurações Visuais</h1>
+            </div>
+            <h2 style="background-color: blueviolet;">Chat Layout</h2>
+            <div style="display: flex;">
+                <div>
+                    <img src="" alt="" width="200px" height="245px"><br>
+                    <label for="layout-default">Layout-default</label>
+                    <input type="radio" name="layout" id="layout-default" value="layout-default">
+                </div>
+                <div>
+                    <img src="" alt="" width="200px" height="245px"><br>
+                    <label for="layout1">Layout1</label>
+                    <input type="radio" name="layout" id="layout1" value="layout1">
+                </div>
+                <div>
+                    <img src="" alt="" width="200px" height="245px"><br>
+                    <label for="layout2">Layout2</label>
+                    <input type="radio" name="layout" id="layout2" value="layout2">
+                </div>
+                <div>
+                    <img src="" alt="" width="200px" height="245px"><br>
+                    <label for="layout3">Layout3</label>
+                    <input type="radio" name="layout" id="layout3" value="layout3">
+                </div>
+            </div>
+            <h2 style="background-color: blueviolet;">Balao de mensagem</h2>
+            <div style="display: flex;">
+                <div>
+                    <img src="" alt="" width="245px" height="160px"><br>
+                    <label for="model1">modelo1</label>
+                    <input type="radio" name="model" id="model1" value="model1">
+                </div>
+                <div>
+                    <img src="" alt="" width="245px" height="160px"><br>
+                    <label for="model2">modelo2</label>
+                    <input type="radio" name="model" id="model2" value="model2">
+                </div>
+                <div>
+                    <img src="" alt="" width="245px" height="160px"><br>
+                    <label for="model3">modelo3</label>
+                    <input type="radio" name="model" id="model3" value="model3">
+                </div>
+                <div>
+                    <img src="" alt="" width="245px" height="160px"><br>
+                    <label for="model4">modelo4</label>
+                    <input type="radio" name="model" id="model4" value="model4">
+                </div>
+            </div>
         </div>
         <input type="button" id="generatorBtn" value="Gerar Arquivo">
         <div style="background-color: coral;">
