--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Config-Service</title>
 </head>
+
 <body>
     <div style="background-color: orange;">
         <h1>Bem vindo ao Config Service</h1>
@@ -25,9 +27,9 @@
             <input type="text" id="url_fs" name=""><br>
             <label for="">Language</label>
             <select name="" id="language">
-              <option value="PTBR">PTBR</option>
-              <option value="ENUS">ENUS</option>
-              <option value="ESES">ESES</option>
+                <option value="PTBR">PTBR</option>
+                <option value="ENUS">ENUS</option>
+                <option value="ESES">ESES</option>
             </select><br>
             <div style="background-color: aqua;">
                 <h1>Configurações Visuais</h1>
@@ -108,8 +110,8 @@
                     <input type="text" id="operatorImg" name=""><br>
                 </div>
             </div>
-                <h2 style="background-color: blueviolet;">Customer</h2>
-                <div style="display: flex;">
+            <h2 style="background-color: blueviolet;">Customer</h2>
+            <div style="display: flex;">
                 <div>
                     <img src="" alt="" width="245px" height="160px"><br>
                     <label for="customerEnable">Enable</label>
@@ -123,10 +125,10 @@
                 <div>
                     <label for="">URL da Imagem</label>
                     <input type="text" id="customerImg" name=""><br>
+                </div>
             </div>
-            </div>
-                <h2 style="background-color: blueviolet;">Logo</h2>
-                <div style="display: flex;">
+            <h2 style="background-color: blueviolet;">Logo</h2>
+            <div style="display: flex;">
                 <div>
                     <img src="" alt="" width="245px" height="160px"><br>
                     <label for="logoEnable">Enable</label>
@@ -140,9 +142,9 @@
                 <div>
                     <label for="">URL da Imagem</label>
                     <input type="text" id="logoImg" name=""><br>
+                </div>
             </div>
-        </div>
-            <h2 style="background-color: blueviolet;">Logo</h2>
+            <h2 style="background-color: blueviolet;">Background Images</h2>
             <div>
                 <label for="">NEW_CHAT_SESSION</label>
                 <input type="text" id="ncsBackground" name=""><br>
@@ -164,13 +166,120 @@
                 <h1>vou fazer essa parte depois</h1>
             </div>
             <h2 style="background-color: blueviolet;">Contact Medias</h2>
+            <h3 style="background-color: rgb(85, 1, 57);">Current Chat</h3>
+            <div style="display: flex;">
+                <div>
+                    <label for="currentChatEnable">Enable</label>
+                    <input type="radio" name="currentChat" id="currentChatEnable" value="true">
+                </div>
+                <div>
+                    <label for="currentChatDisable">Disable</label>
+                    <input type="radio" name="currentChat" id="currentChatDisable" value="false">
+                </div>
+                <div>
+                    <label for="">Link</label>
+                    <input type="text" id="currentChat" name=""><br>
+                </div>
+            </div>
+            <h3 style="background-color: rgb(85, 1, 57);">Skype</h3>
+            <div style="display: flex;">
+                <div>
+                    <label for="skypeEnable">Enable</label>
+                    <input type="radio" name="skype" id="skypeEnable" value="true">
+                </div>
+                <div>
+                    <label for="skypeDisable">Disable</label>
+                    <input type="radio" name="skype" id="skypeDisable" value="false">
+                </div>
+                <div>
+                    <label for="">Link</label>
+                    <input type="text" id="skype" name=""><br>
+                </div>
+            </div>
+            <h3 style="background-color: rgb(85, 1, 57);">Messenger</h3>
+            <div style="display: flex;">
+                <div>
+                    <label for="messengerEnable">Enable</label>
+                    <input type="radio" name="messenger" id="messengerEnable" value="true">
+                </div>
+                <div>
+                    <label for="messengerDisable">Disable</label>
+                    <input type="radio" name="messenger" id="messengerDisable" value="false">
+                </div>
+                <div>
+                    <label for="">Link</label>
+                    <input type="text" id="messenger" name=""><br>
+                </div>
+            </div>
+            <h3 style="background-color: rgb(85, 1, 57);">Telegram</h3>
+            <div style="display: flex;">
+                <div>
+                    <label for="telegramEnable">Enable</label>
+                    <input type="radio" name="telegram" id="telegramEnable" value="true">
+                </div>
+                <div>
+                    <label for="telegramDisable">Disable</label>
+                    <input type="radio" name="telegram" id="telegramDisable" value="false">
+                </div>
+                <div>
+                    <label for="">Link</label>
+                    <input type="text" id="telegram" name=""><br>
+                </div>
+            </div>
+            <h3 style="background-color: rgb(85, 1, 57);">WhatsApp</h3>
+            <div style="display: flex;">
+                <div>
+                    <label for="whatsappEnable">Enable</label>
+                    <input type="radio" name="whatsapp" id="whatsappEnable" value="true">
+                </div>
+                <div>
+                    <label for="whatsappDisable">Disable</label>
+                    <input type="radio" name="whatsapp" id="whatsappDisable" value="false">
+                </div>
+                <div>
+                    <label for="">Link</label>
+                    <input type="text" id="whatsapp" name=""><br>
+                </div>
+            </div>
+            <h3 style="background-color: rgb(85, 1, 57);">Apple Business</h3>
+            <div style="display: flex;">
+                <div>
+                    <label for="appleBusinessEnable">Enable</label>
+                    <input type="radio" name="appleBusiness" id="appleBusinessEnable" value="true">
+                </div>
+                <div>
+                    <label for="appleBusinessDisable">Disable</label>
+                    <input type="radio" name="appleBusiness" id="appleBusinessDisable" value="false">
+                </div>
+                <div>
+                    <label for="">Link</label>
+                    <input type="text" id="appleBusiness" name=""><br>
+                </div>
+            </div>
+            <h3 style="background-color: rgb(85, 1, 57);">Email</h3>
+            <div style="display: flex;">
+                <div>
+                    <label for="emailEnable">Enable</label>
+                    <input type="radio" name="email" id="emailEnable" value="true">
+                </div>
+                <div>
+                    <label for="emailDisable">Disable</label>
+                    <input type="radio" name="email" id="emailDisable" value="false">
+                </div>
+                <div>
+                    <label for="">Link</label>
+                    <input type="text" id="email" name=""><br>
+                </div>
+            </div>
         </div>
-        
-        <input type="button" id="generatorBtn" value="Gerar Arquivo">
-        <div style="background-color: rgb(45,43, 85);border: 16px solid rgb(40,40,78);">
-            <p class="output" id="output"></p>
-        </div>
+    </div>
+
+    <input type="button" id="generatorBtn" value="Gerar Arquivo">
+    <div style="background-color: rgb(45,43, 85);border: 16px solid rgb(40,40,78);">
+        <p class="output" id="output"></p>
+    </div>
     </div>
 </body>
 <script src="main.js"></script>
+
 </html>
