--- a/index.html
+++ b/index.html
@@ -271,15 +271,20 @@
                     <input type="text" id="email" name=""><br>
                 </div>
             </div>
+            <h2 style="background-color: blueviolet;">ComboBox Email</h2>
+            <div id="combobox-email-container">
+                    <input class="plusBtn" type="button" id="addFieldBtn" value="+">
+            </div>
         </div>
     </div>
-
+    
     <input type="button" id="generatorBtn" value="Gerar Arquivo">
     <div style="background-color: rgb(45,43, 85);border: 16px solid rgb(40,40,78);">
         <p class="output" id="output"></p>
     </div>
-    </div>
+</div>
 </body>
 <script src="main.js"></script>
+<script src="addField.js"></script>
 
 </html>
