--- a/index.html
+++ b/index.html
@@ -275,6 +275,43 @@
             <div id="combobox-email-container">
             </div>
             <input class="plusBtn" type="button" id="addFieldBtn" value="+">
+            <h2 style="background-color: blueviolet;">Animations</h2>
+            <div style="display: flex;">
+                <div>
+                    <label for="animationEnable">Enable</label>
+                    <input type="radio" name="animation" id="animationEnable" value="true">
+                </div>
+                <div>
+                    <label for="animationDisable">Disable</label>
+                    <input type="radio" name="animation" id="animationDisable" value="false"><br>
+                    <label for="">Type</label>
+                        <select name="type" id="type">
+                            <option value="fade">fade</option>
+                            <option value="cube">cube</option>
+                            <option value="cover">cover</option>
+                            <option value="flip">flip</option>
+                            <option value="pop">pop</option>
+                            <option value="reveal">reveal</option>
+                            <option value="scroll">scroll</option>
+                            <option value="slide">slide</option>
+                        </select><br>
+                    <label for="">Duration</label>
+                        <select name="duration" id="duration">
+                            <option value="1000">1s</option>
+                            <option value="2000">2s</option>
+                            <option value="3000">3s</option>
+                        </select><br>
+                    <label for="">Direction</label>
+                        <select name="direction" id="direction">
+                            <option value="horizontal">horizontal</option>
+                            <option value="vertical">vertical</option>
+                            <option value="top">top</option>
+                            <option value="right">right</option>
+                            <option value="bottom">bottom</option>
+                            <option value="left">left</option>
+                        </select><br>
+                </div>
+            </div>
         </div>
     </div>
 
