commit session info

--- a/index.html
+++ b/index.html
@@ -312,6 +312,10 @@
                     </select><br>
                 </div>
             </div>
+            <h2 style="background-color: blueviolet;">Session Info</h2>
+            <div id="session-info-container">
+            </div>
+            <input class="plusBtn" type="button" id="addSessionFields" value="+">
         </div>
     </div>
 
