--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                 <div>
                     <label class="enable" id="contactMediaText">Enable</label><br>
                 </div>
-                <input type="checkbox" id="contactMedias" checked 
-                onclick="changeStatus(contactMediaText, contactMedias);"value="true">
+                <input type="checkbox" id="contactMedias" checked
+                    onclick="changeStatus(contactMediaText, contactMedias);" value="true">
                 <label for="contactMedias" class="enableBtn"></label>
                 <div>
                     <label for="">Image Link</label>
@@ -186,8 +186,8 @@
                 <div>
                     <label class="enable" id="skypeEnableText">Enable</label><br>
                 </div>
-                <input type="checkbox" id="skypeEnable" checked 
-                onclick="changeStatus(skypeEnableText, skypeEnable);" value="true">
+                <input type="checkbox" id="skypeEnable" checked onclick="changeStatus(skypeEnableText, skypeEnable);"
+                    value="true">
                 <label for="skypeEnable" class="enableBtn"></label>
                 <div>
                     <label for="">Link</label>
@@ -199,8 +199,8 @@
                 <div>
                     <label class="enable" id="messengerEnableText">Enable</label><br>
                 </div>
-                <input type="checkbox" id="messengerEnable" checked 
-                onclick="changeStatus(messengerEnableText, messengerEnable);" value="true">
+                <input type="checkbox" id="messengerEnable" checked
+                    onclick="changeStatus(messengerEnableText, messengerEnable);" value="true">
                 <label for="messengerEnable" class="enableBtn"></label>
                 <div>
                     <label for="">Link</label>
@@ -213,7 +213,7 @@
                     <label class="enable" id="telegramEnableText">Enable</label><br>
                 </div>
                 <input type="checkbox" id="telegramEnable" checked
-                onclick="changeStatus(telegramEnableText, telegramEnable);" value="true">
+                    onclick="changeStatus(telegramEnableText, telegramEnable);" value="true">
                 <label for="telegramEnable" class="enableBtn"></label>
                 <div>
                     <label for="">Link</label>
@@ -226,7 +226,7 @@
                     <label class="enable" id="whatsappEnableText">Enable</label><br>
                 </div>
                 <input type="checkbox" id="whatsAppEnable" checked
-                onclick="changeStatus(whatsappEnableText, whatsAppEnable);" value="true">
+                    onclick="changeStatus(whatsappEnableText, whatsAppEnable);" value="true">
                 <label for="whatsAppEnable" class="enableBtn"></label>
                 <div>
                     <label for="">Link</label>
@@ -239,7 +239,7 @@
                     <label class="enable" id="appleBusinessEnableText">Enable</label><br>
                 </div>
                 <input type="checkbox" id="appleBusinessEnable" checked
-                onclick="changeStatus(appleBusinessEnableText, appleBusinessEnable);" value="true">
+                    onclick="changeStatus(appleBusinessEnableText, appleBusinessEnable);" value="true">
                 <label for="appleBusinessEnable" class="enableBtn"></label>
                 <div>
                     <label for="">Link</label>
@@ -251,15 +251,15 @@
                 <div>
                     <label class="enable" id="emailEnableText">Enable</label><br>
                 </div>
-                <input type="checkbox" id="emailEnable" checked 
-                onclick="changeStatus(emailEnableText, emailEnable);" value="true">
+                <input type="checkbox" id="emailEnable" checked onclick="changeStatus(emailEnableText, emailEnable);"
+                    value="true">
                 <label for="emailEnable" class="enableBtn"></label>
                 <div>
                     <label for="">Link</label>
                     <input class="input-text" type="text" id="email" name=""><br>
                 </div>
             </div>
-            <h2 class="section-title"s>ComboBox Email</h2>
+            <h2 class="section-title" s>ComboBox Email</h2>
             <div id="combobox-email-container">
             </div>
             <input class="plusBtn" type="button" id="addFieldBtn" value="+">
@@ -269,7 +269,7 @@
                     <label class="enable" id="animationEnableText">Enable</label><br>
                 </div>
                 <input type="checkbox" id="animationEnable" checked
-                onclick="changeStatus(animationEnableText, animationEnable);" value="true">
+                    onclick="changeStatus(animationEnableText, animationEnable);" value="true">
                 <label for="animationEnable" class="enableBtn"></label>
                 <div>
                     <label for="">Type</label>
@@ -304,6 +304,45 @@
             <div id="session-info-container">
             </div>
             <input class="plusBtn" type="button" id="addSessionFields" value="+">
+            <h2 class="section-title">Default Fields</h2>
+            <div class="section" id="default-fields">
+                <div>
+                    <label for="">NOME</label>
+                </div>
+                <div>
+                    <label class="enable" id="defaultFieldsEnableTextNAME">Enable</label><br>
+                </div>
+                <input type="checkbox" id="defaultFieldsEnableNAME" checked
+                    onclick="changeStatus(defaultFieldsEnableTextNAME, defaultFieldsEnableNAME);" value="true">
+                <label for="defaultFieldsEnableNAME" class="enableBtn"></label>
+                <div>
+                    <label for="">PHONE</label>
+                </div>
+                <div>
+                    <label class="enable" id="defaultFieldsEnableTextPHONE">Enable</label><br>
+                </div>
+                <input type="checkbox" id="defaultFieldsEnablePHONE" checked
+                    onclick="changeStatus(defaultFieldsEnableTextPHONE, defaultFieldsEnablePHONE);" value="true">
+                <label for="defaultFieldsEnablePHONE" class="enableBtn"></label>
+                <div>
+                    <label for="">CPF</label>
+                </div>
+                <div>
+                    <label class="enable" id="defaultFieldsEnableTextCPF">Enable</label><br>
+                </div>
+                <input type="checkbox" id="defaultFieldsEnableCPF" checked
+                    onclick="changeStatus(defaultFieldsEnableTextCPF, defaultFieldsEnableCPF);" value="true">
+                <label for="defaultFieldsEnableCPF" class="enableBtn"></label>
+                <div>
+                    <label for="">EMAIL</label>
+                </div>
+                <div>
+                    <label class="enable" id="defaultFieldsEnableTextEMAIL">Enable</label><br>
+                </div>
+                <input type="checkbox" id="defaultFieldsEnableEMAIL" checked
+                    onclick="changeStatus(defaultFieldsEnableTextEMAIL, defaultFieldsEnableEMAIL);" value="true">
+                <label for="defaultFieldsEnableEMAIL" class="enableBtn"></label>
+            </div>
         </div>
     </div>
     <div class="generatorBtn">
